...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLeagueCode" />

    <Button
        android:id="@+id/buttonQuitLeague"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_redish"
        android:text="@string/quit_league"
        android:textColor="@color/app_main2"
...
